feat: Add AI feedback generation models and testing scripts

--- a/feedback/0_AI-Pipeline/Archive/0_test.ipynb
+++ b/feedback/0_AI-Pipeline/Archive/0_test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please provide the input. I need text or data to be able to process it.  \"INSERT_INPUT_HERE\" is a placeholder; I need you to replace it with the actual input you want me to work with.\n",
+      "Please provide the input you would like me to insert.  I need some text or data to work with.\n",
       "\n"
      ]
     }
