--- a/feedback/0_AI-Pipeline/Archive/1_enum_eval.ipynb
+++ b/feedback/0_AI-Pipeline/Archive/1_enum_eval.ipynb
@@ -2,56 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error evaluating criterion: 403 Request had insufficient authentication scopes. [reason: \"ACCESS_TOKEN_SCOPE_INSUFFICIENT\"\n",
+      "domain: \"googleapis.com\"\n",
+      "metadata {\n",
+      "  key: \"service\"\n",
+      "  value: \"generativelanguage.googleapis.com\"\n",
+      "}\n",
+      "metadata {\n",
+      "  key: \"method\"\n",
+      "  value: \"google.ai.generativelanguage.v1beta.GenerativeService.GenerateContent\"\n",
+      "}\n",
+      "]\n",
+      "Error evaluating criterion: 403 Request had insufficient authentication scopes. [reason: \"ACCESS_TOKEN_SCOPE_INSUFFICIENT\"\n",
+      "domain: \"googleapis.com\"\n",
+      "metadata {\n",
+      "  key: \"service\"\n",
+      "  value: \"generativelanguage.googleapis.com\"\n",
+      "}\n",
+      "metadata {\n",
+      "  key: \"method\"\n",
+      "  value: \"google.ai.generativelanguage.v1beta.GenerativeService.GenerateContent\"\n",
+      "}\n",
+      "]\n",
+      "Error evaluating criterion: 403 Request had insufficient authentication scopes. [reason: \"ACCESS_TOKEN_SCOPE_INSUFFICIENT\"\n",
+      "domain: \"googleapis.com\"\n",
+      "metadata {\n",
+      "  key: \"service\"\n",
+      "  value: \"generativelanguage.googleapis.com\"\n",
+      "}\n",
+      "metadata {\n",
+      "  key: \"method\"\n",
+      "  value: \"google.ai.generativelanguage.v1beta.GenerativeService.GenerateContent\"\n",
+      "}\n",
+      "]\n",
+      "Error evaluating criterion: 403 Request had insufficient authentication scopes. [reason: \"ACCESS_TOKEN_SCOPE_INSUFFICIENT\"\n",
+      "domain: \"googleapis.com\"\n",
+      "metadata {\n",
+      "  key: \"service\"\n",
+      "  value: \"generativelanguage.googleapis.com\"\n",
+      "}\n",
+      "metadata {\n",
+      "  key: \"method\"\n",
+      "  value: \"google.ai.generativelanguage.v1beta.GenerativeService.GenerateContent\"\n",
+      "}\n",
+      "]\n",
+      "Error evaluating criterion: 403 Request had insufficient authentication scopes. [reason: \"ACCESS_TOKEN_SCOPE_INSUFFICIENT\"\n",
+      "domain: \"googleapis.com\"\n",
+      "metadata {\n",
+      "  key: \"service\"\n",
+      "  value: \"generativelanguage.googleapis.com\"\n",
+      "}\n",
+      "metadata {\n",
+      "  key: \"method\"\n",
+      "  value: \"google.ai.generativelanguage.v1beta.GenerativeService.GenerateContent\"\n",
+      "}\n",
+      "]\n",
       "\n",
-      "Criterion: Is it substantial, precise, relevant, arguable, concise, and sets up the forthcoming evidence?\n",
-      "Result: Pass\n",
-      "\n",
-      "Criterion: Is it appropriate in terms of scope?\n",
-      "Result: Pass\n",
-      "\n",
-      "Criterion: Is it supported by the evidence of your work?\n",
-      "Result: Pass\n",
-      "\n",
-      "Criterion: Does it reference what type of evidence you will use to give the reader an idea of how you will support your claim?\n",
-      "Result: Fail\n",
-      "\n",
-      "Detailed Analysis for Criterion: Does it reference what type of evidence you will use to give the reader an idea of how you will support your claim?\n",
-      "## Analysis of Thesis Statement:\n",
-      "\n",
-      "**Issue Identified**: The thesis statement does not reference the type of evidence that will be used to support the claim. \n",
-      "\n",
-      "**Before**: Investing in homeless shelters is merely a temporary relief to homelessness in San Francisco because doing so fails to address underlying causes in terms of housing unaffordability, low wages, and rising inflation.\n",
-      "\n",
-      "**After**: Investing in homeless shelters is merely a temporary relief to homelessness in San Francisco because doing so fails to address underlying causes in terms of housing unaffordability, low wages, and rising inflation, as evidenced by [insert specific type of evidence, e.g., statistics on the number of people cycling through shelters, studies on the effectiveness of shelter programs, or expert opinions on the root causes of homelessness].\n",
-      "\n",
-      "**Explanation**: This change is beneficial because it explicitly mentions the type of evidence that will be used to support the claim. By stating \"as evidenced by [insert specific type of evidence],\" the thesis statement provides the reader with a clear understanding of the approach the essay will take. This helps to create a more focused and persuasive argument.\n",
-      "\n",
-      "Criterion: Is it a one to two sentence statement of your main claim?\n",
-      "Result: Pass\n",
-      "\n",
-      "--- Comprehensive Thesis Evaluation ---\n",
-      "Failed Criteria:\n",
-      "- Does it reference what type of evidence you will use to give the reader an idea of how you will support your claim?\n",
-      "\n",
-      "Detailed Analyses:\n",
-      "\n",
-      "Criterion: Does it reference what type of evidence you will use to give the reader an idea of how you will support your claim?\n",
-      "## Analysis of Thesis Statement:\n",
-      "\n",
-      "**Issue Identified**: The thesis statement does not reference the type of evidence that will be used to support the claim. \n",
-      "\n",
-      "**Before**: Investing in homeless shelters is merely a temporary relief to homelessness in San Francisco because doing so fails to address underlying causes in terms of housing unaffordability, low wages, and rising inflation.\n",
-      "\n",
-      "**After**: Investing in homeless shelters is merely a temporary relief to homelessness in San Francisco because doing so fails to address underlying causes in terms of housing unaffordability, low wages, and rising inflation, as evidenced by [insert specific type of evidence, e.g., statistics on the number of people cycling through shelters, studies on the effectiveness of shelter programs, or expert opinions on the root causes of homelessness].\n",
-      "\n",
-      "**Explanation**: This change is beneficial because it explicitly mentions the type of evidence that will be used to support the claim. By stating \"as evidenced by [insert specific type of evidence],\" the thesis statement provides the reader with a clear understanding of the approach the essay will take. This helps to create a more focused and persuasive argument.\n"
+      "Thesis passes all criteria!\n"
      ]
     }
    ],
@@ -70,10 +84,10 @@
     "# Note: You'll need to set up your Google AI API key first\n",
     "# genai.configure(api_key='YOUR_API_KEY')\n",
     "model = genai.GenerativeModel(\n",
-    "    model_name=\"gemini-1.5-flash-001\",\n",
+    "    model_name=\"gemini-1.5-flash\",\n",
     "    generation_config=genai.GenerationConfig(\n",
     "        temperature=0.1,\n",
-    "        max_output_tokens=500,  # Increased max tokens to get full analysis\n",
+    "        max_output_tokens=100,  # Increased max tokens to get full analysis\n",
     "    ),\n",
     ")\n",
     "\n",
